# numbview

./: .gitignore  CMakeLists.txt  README.md
doc/: developers-guide.md  roadmap.md
include/: addinbase.h  commandmanager.h  configmanager.h  globalexceptionhandler.h  localizationmanager.h  unittests.h  userinterface.h  utils.h  viewswitchcommand.h  viewswitchlistener.h
manifest/: manifest.json
src/: addinbase.cpp  commandmanager.cpp  configmanager.cpp  globalexceptionhandler.cpp  localizationmanager.cpp  unittests.cpp  userinterface.cpp  utils.cpp  viewswitchcommand.cpp  viewswitchlistener.cpp
